--- a/animation-1/Base.lproj/Main.storyboard
+++ b/animation-1/Base.lproj/Main.storyboard
@@ -34,6 +34,25 @@
                                             <segue destination="7Bq-3g-Uts" kind="push" id="Ij2-3y-chh"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="phn-f8-g9b" style="IBUITableViewCellStyleDefault" id="iea-xd-JEh">
+                                        <rect key="frame" x="0.0" y="108" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iea-xd-JEh" id="jje-Ug-372">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Opacity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="phn-f8-g9b">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="00O-IA-ybx" kind="push" id="Y68-mi-CnY"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -47,6 +66,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sDy-qZ-1qq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="715" y="353"/>
+        </scene>
+        <!--Opacity View Controller-->
+        <scene sceneID="Ii0-VJ-GGi">
+            <objects>
+                <viewController id="00O-IA-ybx" customClass="OpacityViewController" customModule="animation_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WE6-Y3-K05">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="B4L-bh-f8b">
+                                <rect key="frame" x="110" y="169" width="100" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <color key="backgroundColor" red="0.37056741311591934" green="1" blue="0.20236949208579635" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.58693632736153423" green="1" blue="0.46564519732234821" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JpO-pc-hXb"/>
+                    <connections>
+                        <outlet property="greenSquare" destination="B4L-bh-f8b" id="5nW-MF-D6c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hcm-Pw-Xlv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1105" y="1011"/>
         </scene>
         <!--Position View Controller-->
         <scene sceneID="New-l0-VuN">
